<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondillo"
    android:weightSum="1"
    tools:context="jamsapp.hogwarts.cambiarcontrasena"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="167dp"
        android:background="@color/alpha_logueo">

        <ImageView
            android:layout_width="267dp"
            android:layout_height="157dp"
            app:srcCompat="@drawable/hogwarts"
            android:id="@+id/imageView3"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="311dp"
        android:layout_height="29dp"
        android:background="@color/alpha_logueo"
        android:layout_gravity="center"
        android:layout_marginTop="40dp">


        <TextView
            android:text="@string/CAMC"
            android:textSize="20dp"
            android:textColor="@color/color_black"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textView5"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="311dp"
        android:layout_height="match_parent"
        android:background="@color/alpha_logueo"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:weightSum="1">

        <EditText
            android:inputType="textPassword"
            android:hint="@string/NCON"
            android:textColorHint="@color/color_black"
            android:ems="10"
            android:id="@+id/contrasena"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:background="@color/boton_logue"
            android:layout_width="220dp"
            android:layout_height="25dp" />

        <EditText
            android:layout_width="220dp"
            android:layout_height="25dp"
            android:inputType="textPassword"
            android:hint="@string/RCON"
            android:textColorHint="@color/color_black"
            android:ems="10"
            android:id="@+id/rcontrasena"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="15dp"
            android:background="@color/boton_logue" />

        <Button
            android:text="@string/GUA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button5"
            android:layout_weight="0.16"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="15dp" />

        <Button
            android:text="@string/VOLVER"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button6"
            android:layout_weight="0.16"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp" />


    </LinearLayout>

</LinearLayout>
