<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondillo"
    android:weightSum="1"
    tools:context="jamsapp.hogwarts.Eliminarmateria"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="167dp"
        android:background="@color/alpha_logueo">

        <ImageView
            android:layout_width="267dp"
            android:layout_height="157dp"
            app:srcCompat="@drawable/hogwarts"
            android:id="@+id/imageView3"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="311dp"
        android:layout_height="29dp"
        android:background="@color/alpha_logueo"
        android:layout_gravity="center"
        android:layout_marginTop="40dp">


        <TextView
            android:text="@string/ELI"
            android:textSize="20dp"
            android:textColor="@color/color_black"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textView5"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="311dp"
        android:layout_height="match_parent"
        android:background="@color/alpha_logueo"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:weightSum="1">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1">

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="235dp"
                    android:layout_height="37dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@color/boton_logue" />

                <EditText
                    android:id="@+id/codigo"
                    android:layout_width="220dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="40dp"
                    android:background="@color/boton_logue"
                    android:ems="10"
                    android:hint="@string/ID"
                    android:inputType="text"
                    android:textColorHint="@color/color_black" />

                <EditText
                    android:id="@+id/nombre"
                    android:layout_width="220dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="40dp"
                    android:background="@color/boton_logue"
                    android:ems="10"
                    android:hint="@string/NOM"
                    android:inputType="text"
                    android:textColorHint="@color/color_black" />

                <EditText
                    android:id="@+id/descripcion"
                    android:layout_width="220dp"
                    android:layout_height="100dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="40dp"
                    android:layout_weight="0.14"
                    android:background="@color/boton_logue"
                    android:ems="10"
                    android:hint="@string/descri"
                    android:inputType="text|textMultiLine"
                    android:lines="6"
                    android:textColorHint="@color/color_black" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="0.16"
                    android:text="@string/ELIM" />

                <Button
                    android:id="@+id/volver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="0.16"
                    android:text="@string/VOLVER" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>
