<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondillo"
    android:weightSum="1"
    tools:context="jamsapp.hogwarts.Matriculamateria"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="167dp"
        android:background="@color/alpha_logueo">

        <ImageView
            android:layout_width="267dp"
            android:layout_height="157dp"
            app:srcCompat="@drawable/hogwarts"
            android:id="@+id/imageView3"
            android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="311dp"
        android:layout_height="29dp"
        android:background="@color/alpha_logueo"
        android:layout_gravity="center"
        android:layout_marginTop="40dp">


        <TextView
            android:text="@string/MAT"
            android:textSize="20dp"
            android:textColor="@color/color_black"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/textView5"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="311dp"
        android:layout_height="match_parent"
        android:background="@color/alpha_logueo"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:weightSum="1">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="1">

                <TextView
                    android:text="@string/PROF"
                    android:textSize="18dp"
                    android:textColor="@color/color_black"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/textView6"
                    android:textAlignment="center"/>

                <Spinner
                    android:id="@+id/spinnermateria"
                    android:layout_width="235dp"
                    android:layout_height="37dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp" />

                <RadioButton
                    android:id="@+id/radprofesor1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="40dp"
                    android:text="RadioButton" />

                <RadioButton
                    android:id="@+id/radprofesor2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="RadioButton" />

                <RadioButton
                    android:id="@+id/radprofesor3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="RadioButton" />

                <Button
                    android:text="@string/GUA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/button5"
                    android:layout_weight="0.16"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="15dp" />

                <Button
                    android:id="@+id/volver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_weight="0.16"
                    android:text="@string/VOLVER" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>
